fix: fix admin panel UI and feature bugs
